--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ pyngrok==6.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
-pywin32==306
+pywin32
 PyYAML==6.0
 pyzmq==25.0.2
 requests==2.29.0
@@ -70,4 +70,4 @@ tzdata==2023.3
 urllib3==1.26.15
 wcwidth==0.2.6
 Werkzeug==2.3.2
-gunicorn==20.1.0
+gunicorn
