--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cycler==0.11.0
 dash==2.9.3
 dash-bootstrap-components==1.4.1
 dash-core-components==2.0.0
+dash-dangerously-set-inner-html==0.0.2
 dash-html-components==2.0.0
 dash-table==5.0.0
 Flask==2.3.1
